--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/codeFellowship
+spring.datasource.username=postgres
+spring.datasource.password=tnuhc22
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
