--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=postgres
 spring.datasource.password=tnuhc22
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+server.error.whitelabel.enabled=false
