--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=tnuhc22
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 server.error.whitelabel.enabled=false
+spring.mvc.hiddenmethod.filter.enabled=true
